--- a/assets/style.css
+++ b/assets/style.css
@@ -1,105 +1,96 @@
 header{
      background-color: royalblue;
-     padding: 10px;
+     padding: 20px;
 }
 
-nav > section{
-     border: 1px solid black;
-     width: 70%;
-     margin: auto;
-     padding: 10px;
+.container-80{
+     width: 80%;
+     margin-left: auto;
+     margin-right: auto;
+}
+
+.h-400{
+     height: 400px;
+}
+
+.flex{
      display: flex;
+}
+
+a{
+     text-decoration: none;
+}
+
+nav section{
+     border: 1px solid black;
+     padding: 20px 5px;
      justify-content: space-between;
-}
-
-header > section{
-     background-color: royalblue;
-     height: 300px;
-}
-
-.foto1{
-     border: 1px solid black;
-     width: 40%;
-     height: 250px;
-     margin: 20px auto;
-}
-
-.sezionebianca{
-     height: 350px;
-     display: flex;
-     flex-direction: row;
-     justify-content: center;
      align-items: center;
 }
 
+nav section ul li{
+     display: inline-block;
+     list-style-type: none;
+     margin: 0 auto;
+}
+
+.intro{
+     border: 1px solid black;
+     background-color: royalblue;
+     margin-top: 20px;
+}
+
+main section{
+     padding: 20px 0;
+}
+
+
 .foto{
      border: 1px solid black;
-     flex-basis: 500px;
-     height: 300px;
-
+     flex-basis: 70%;
 }    
 
 .testo{
      border: 1px solid black;
-     flex-basis: 250px;
-     height: 300px;
+     flex-basis: 30%;
 }
 
 .sezionegrigia{
      background-color: lightgray;
-     height: 350px;
-     display: flex;
-     flex-direction: row;
-     justify-content: center;
-     align-items: center;
 }
 
-.sezionegrigia2{
+#sezionegrigia2{
      background-color: lightgray;
      height: 600px;
-     display: flex;
-     justify-content: center;
-     align-items: center;
 }
 
-.foto2{
+.sez-grande{
      border: 1px solid black;
-     flex-basis: 750px;
+     flex-basis: 100%;
      height: 550px;
 }
 
-.footer1{
-     background-color: black;
-     height: 350px;
-     display: flex;
-     flex-direction: row;
-     justify-content: center;
-     align-items: center;
-}
-
-.column1{
-     border: 1px solid white;
-     flex-basis: 220px;
-     height: 300px;
-}
-
-.column2{
-     border: 1px solid white;
-     flex-basis: 130px;
-     height: 300px;
-}
-
 footer{
-     background-color: black;
-     display: flex;
+     background-color: #282828;
+     padding: 20px 0;
 }
 
-footer > section{
+.row1{
+     border: 1px solid white;
+     flex-basis: 40%;
+}
+
+.row2{
+     border: 1px solid white;
+     flex-basis: calc(60% / 4);
+}
+
+hr{
+     margin: 20px 0;
+}
+
+#footer-social{
      color: white;
      border: 1px solid white;
-     width: 750px;
-     margin: auto;
-     padding: 10px;
-     display: flex;
      justify-content: space-between;
 }
